hw04. GC statistics measures was added.